# Universal-IFR-Extractor

./: .gitignore  CMakeLists.txt  EFI.cpp  EFI.h  Makefile  README.md  UEFI.cpp  UEFI.h  UEFIHeader.h  Universal IFR Extractor.rc  Universal IFR Extractor.sln  Universal IFR Extractor.vcxproj  ifrextractor.rc  main-cli.cpp  main.cpp  resource.h
