PROJECT(IFRExtractor)

SET(PROJECT_SOURCES_CLI
 EFI.cpp
 UEFI.cpp
 main-cli.cpp
)

SET(PROJECT_SOURCES_WIN
 EFI.cpp
 UEFI.cpp
 main.cpp
)

SET(PROJECT_HEADERS 
 EFI.h
 UEFI.h
 UEFIHeader.h
)

ADD_EXECUTABLE(ifrextract ${PROJECT_SOURCES_CLI} ${PROJECT_HEADERS})
IF(WIN32)
 IF(MSVC)
  ADD_EXECUTABLE(IRFExtractor WIN32 ${PROJECT_SOURCES_WIN} ${PROJECT_HEADERS} ifrextractor.rc)
 ENDIF()
ENDIF()
